objects/QC_Problem_Identified__c.object
<CustomObject>
    <fields>
        <fullName>Other_Details__c</fullName>
        <label>Other Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Vehicle Information on Title</fullName>
                </value>
                <value>
                    <fullName>Odometer Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Missing Signature</fullName>
                </value>
                <value>
                    <fullName>Reassignment Error</fullName>
                </value>
                <value>
                    <fullName>Missing Notary</fullName>
                </value>
                <value>
                    <fullName>Write-Overs</fullName>
                </value>
                <value>
                    <fullName>Reassigned to Wrong Purchaser</fullName>
                </value>
                <value>
                    <fullName>Missing Document(s)</fullName>
                </value>
                <value>
                    <fullName>Damaged Title</fullName>
                </value>
                <value>
                    <fullName>Listing Error</fullName>
                </value>
                <value>
                    <fullName>More Recently Issued Title</fullName>
                </value>
                <value>
                    <fullName>Buyer Requested Duplicate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Buyer/Seller Info Incomplete/Incorrect</fullName>
                </value>
                <value>
                    <fullName>ODOM/Date</fullName>
                </value>
                <value>
                    <fullName>Missed AGT Signature</fullName>
                </value>
                <value>
                    <fullName>Incomplete Vehicle Info</fullName>
                </value>
                <value>
                    <fullName>Filed Incorrectly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Control__c</fullName>
        <label>Quality Control</label>
        <referenceTo>Quality_Control__c</referenceTo>
        <relationshipLabel>QC Problems Identified</relationshipLabel>
        <relationshipName>QC_Problems_Identified</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                    <isActive>false</isActive>
                    <label>Invalid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Problem_Subset__c</fullName>
        <label>Title Problem Subset</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Problem__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>Address - Write over</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Branded on the Front of Title - Odom Discr.</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Buyer Signature Missing from Prior Reassignment</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>Date - Write over</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Dated Incorrectly on Reassignment</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>Incorrect Address on Reassignment</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>Incorrect Name - Wrong Purchaser</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>Mileage - Write over</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Name - Write over</label>
                </value>
                <value>
                    <fullName>J</fullName>
                    <label>Reassignment not Included</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <label>Original Owner Missing Signature</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>Reassigned to ACV - Wrong Purchaser</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Seller Missing Signature &amp; Missing ACV POA</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>VIN Incorrect on Title</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Year, Make, or Model Incorrect on Title</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Written Odom Discr.</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Separate Reassignment Odom Discr.</label>
                </value>
                <value>
                    <fullName>Q</fullName>
                    <label>VIN Incorrect on Reassignment</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Year, Make, or Model Incorrect on Reassignment</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>Missing Notary</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <label>Missing Lien Release</label>
                </value>
                <value>
                    <fullName>V</fullName>
                    <label>Damaged Title</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>Undisclosed repossession paperwork</label>
                </value>
                <value>
                    <fullName>Dealer Stamp Used Instead of Notary</fullName>
                </value>
                <value>
                    <fullName>Missing Owner POA</fullName>
                </value>
                <value>
                    <fullName>Missing One and the Same</fullName>
                </value>
                <value>
                    <fullName>Missing Death / Marriage / Divorce Certificate</fullName>
                </value>
                <value>
                    <fullName>Undisclosed application for title</fullName>
                </value>
                <value>
                    <fullName>Undisclosed Non-Titled Vehicle</fullName>
                </value>
                <value>
                    <fullName>More Recently Issued Title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QC Problem Identified</label>
    <nameField>
        <displayFormat>P{000000}</displayFormat>
        <label>QC Problem Identified Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QC Problems Identified</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>